public/content/@express/v4.3/product_use/resource/network/lb/lb_balance/lb_manage.adoc
---
title: "管理负载均衡器"
weight: 5
---

== 场景描述

该章节主要用于指导用户负载均衡器进行管理，主要包括修改属性、关机/启动、应用修改、扩容、修改节点数、绑定/解绑标签、删除等操作。


== 修改属性

. 登录{product_console_name}。
. 在顶部导航栏，选择**资源** > *网络* > *负载均衡器*，进入 **负载均衡器**列表页面。点击待修改属性的负载均衡器所在行右侧的更多操作，选择**修改**。
+
image::/images/express/console/lb_manage_3.png[]

. 在弹出的**修改属性**的窗口中，输入新的名称或描述，点击**修改**即可。
//+
//image::/images/express/console/lb_manage_4.png[,50%]

== 关机/启动

. 在**负载均衡器**列表页面。点击待关机的负载均衡器所在行右侧的更多操作，选择**关机**。
+
image::/images/express/console/lb_manage_5.png[]

. 在弹出的**关闭**窗口中，点击**关闭**即可。

. 返回负载均衡器列表页面，若当前负载均衡器状态为``已关机``，表明负载均衡器已关闭成功。


. 在负载均衡器列表页面，点击待启动的负载均衡器所在行右侧的更多操作，选择**启动**。
+
image::/images/express/console/lb_manage_7.png[]

. 在弹出的**启动**窗口中，点击启动，返回负载均衡器列表页面，若当前负载均衡器状态为``活跃``，表明负载均衡器已启动成功。
//+
//image::/images/express/console/lb_manage_8.png[,50%]

== 扩容

负载均衡器的扩容必须在**关机**状态下进行。

. 在**负载均衡器**列表页面。点击待扩容的负载均衡器所在行右侧的更多操作，选择**扩容**。
+
image::/images/express/console/lb_manage_9.png[]

. 在弹出的**扩容**窗口中，选择**最大连接数**，点击扩容即可。
+
image::/images/express/console/lb_manage_10.png[,50%]

== 修改节点数

负载均衡器的扩容必须在**关机**状态下进行。

. 在**负载均衡器**列表页面。点击待修改节点数的负载均衡器所在行右侧的更多操作，选择**修改节点数量**。
+
image::/images/express/console/lb_manage_11.png[]

. 在弹出的**修改节点数量**的窗口中，根据需求设置节点数，点击**修改**即可。
//+
//image::/images/express/console/lb_manage_12.png[,50%]

== 绑定/解绑标签

. 在**负载均衡器**列表页面。点击待绑定标签的负载均衡器所在行右侧的更多操作，选择**标签**，点击**绑定**。
+
image::/images/express/console/lb_manage_13.png[]

. 在弹出的**绑定标签**的窗口中，选择合适的标签，点击**绑定**即可。
+

include::../../../../../../../_components/note.adoc[]
* 若当前平台内没有可用的标签，点击**创建**，即可创建新的标签。
* 可绑定单个或多个标签。

include::../../../../../../../_components/table_footer.adoc[]
//+
//image::/images/express/console/lb_manage_14.png[,50%]

. 点击待解绑标签的负载均衡器所在行右侧的更多操作，选择 *标签*，点击**解绑**。
. 在弹出的**解绑标签**窗口中，删除待解绑的标签，点击**确定**即可。
//+
//image::/images/express/console/lb_manage_15.png[,50%]

== 删除

. 在**负载均衡器**列表页面。点击待删除的负载均衡器所在行右侧的更多操作，选择**删除**。
+
image::/images/express/console/lb_manage_16.png[]

. 在弹出的**删除**窗口中，点击**删除**即可。
//+
//image::/images/express/console/lb_manage_17.png[]

== 应用修改

若对指定负载均衡器做出相应的修改后，据需要点击**应用修改**，使得当前修改生效。 +
主要针对负载均衡器详情页面内的监控器、图形化、配置备份、网络、设置等操作的修改。

. 在**负载均衡器**列表页面，若某一负载均衡器中有些修改尚未生效，则其名称上会出现相应的提示符号，如图所示。
+
image::/images/express/console/lb_manage_18.png[]

. 点击未应用修改的负载均衡器所在行右侧的更多操作，选择**应用修改**即可。

